[package]
name = "cse140-final-project-riscv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
derive_more = "0.99"
strum = "0.26"
strum_macros = "0.26"
ux = "0.1.6"

[dev-dependencies]
pretty_assertions = "1.4"
